--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -24,9 +24,9 @@ sources:
     version: "2"
     address: 0.0.0.0:6010
 
-  vyos_source:
+  syslog_source:
     type: syslog
-    address: 0.0.0.0:6020
+    address: 0.0.0.0:1514
     mode: tcp
 
 #
@@ -43,54 +43,46 @@ transforms:
       # Drop pod_labels
       del(.pod_labels)
 
-  # [63950.153039] [wan-local-default-D]IN=eth4 OUT= MAC=xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx SRC=xxx.xxx.xxx.xxx DST=xxx.xxx.xxx.xxx LEN=40 TOS=0x00 PREC=0x00 TTL=240 ID=60610 PROTO=TCP SPT=53451 DPT=2002 WINDOW=1024 RES=0x00 SYN URGP=0
-  vyos_firewall_route:
-    type: route
-    inputs: ["vyos_source"]
-    route:
-      firewall: |
-        .facility == "kern" && match!(.message, r'^\[(.*?)\].(.*)')
-
-  vyos_firewall_remap:
+  syslog_remap:
     type: remap
-    inputs: ["vyos_firewall_route.firewall"]
+    inputs: ["syslog_source"]
     source: |
-      # Parse firewall rule message
-      split_message, split_err = parse_regex(.message, r'^\[.*\].\[(?P<rule>.*?)\](?P<fields>.*)')
-      if split_err != null {
-          abort
-      }
-      # Extract separate fields from message
-      split_message.fields, split_err = strip_whitespace(split_message.fields)
-      if split_err != null {
-          abort
-      }
-      .message, parse_err = parse_key_value(split_message.fields, whitespace: "strict")
-      if parse_err != null {
-          abort
-      }
-      # Add more information about the triggered rule
-      .message.RULE, parse_err = parse_regex(split_message.rule, r'^(?P<from_zone>\w+)-(?P<to_zone>\w+)-(?P<id>\w+)-(?P<action>\w+)$')
-      if parse_err != null {
-          abort
-      }
-
-  vyos_firewall_wan_route:
-    type: route
-    inputs: ["vyos_firewall_remap"]
-    route:
-      from_wan: .message.RULE.from_zone == "wan"
-
-  vyos_firewall_geoip_remap:
-    type: remap
-    inputs: ["vyos_firewall_wan_route.from_wan"]
-    source: |
-      .geoip = get_enrichment_table_record!(
-          "geoip_table", {
-              "ip": .message.SRC
+      msg = parse_csv!(string!(.message))
+      # Only parse IPv4 / IPv6
+      if msg[8] == "4" || msg[8] == "6" {
+        .filter_interface = msg[4]
+        .filter_direction = msg[7]
+        .filter_action = msg[6]
+        .filter_ip_version = msg[8]
+        .filter_protocol = msg[16]
+        .filter_source_ip = msg[18]
+        .filter_destination_ip = msg[19]
+        if (msg[16] == "icmp" || msg[16] == "igmp" || msg[16] == "gre") {
+          .filter_data = msg[20]
+        } else {
+          .filter_source_port = msg[20]
+          .filter_destination_port = msg[21]
+          .filter_data_length = msg[22]
+          if msg[8] == "4" && msg[16] == "tcp" {
+            .filter_tcp_flags = msg[23]
           }
-      )
+        }
+      }
 
+  syslog_route:
+    type: route
+    inputs: ["syslog_remap"]
+    route:
+      pass_action: .filter_action == "pass"
+
+  syslog_geoip_remap:
+    type: remap
+    inputs: ["syslog_route.pass_action"]
+    source: |
+      .geoip = get_enrichment_table_record!("geoip_table",
+        {
+          "ip": .filter_source_ip
+        })
 #
 # Sinks
 #
@@ -120,11 +112,14 @@ sinks:
       namespace: '{{ kubernetes.pod_namespace }}'
       node: '{{ kubernetes.pod_node_name }}'
 
-  vyos:
-    inputs: ["vyos_source", "vyos_firewall_geoip_remap"]
+  syslog:
+    inputs:
+      - syslog_route._unmatched
+      - syslog_geoip_remap
     type: loki
     endpoint: http://loki-gateway.monitoring.svc.cluster.local
-    encoding: { codec: json }
+    encoding:
+      codec: json
     out_of_order_action: accept
     remove_label_fields: true
     remove_timestamp: true
