vector agg config update

--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -43,11 +43,11 @@ transforms:
       # Drop pod_labels
       del(.pod_labels)
 
-  syslog_remap:
-    type: remap
-    inputs: ["syslog_source"]
-    source: |
-      msg = parse_syslog!(string!(.message))
+  # syslog_remap:
+  #   type: remap
+  #   inputs: ["syslog_source"]
+  #   source: |
+  #     msg = parse_syslog!(string!(.message))
 
   # syslog_route:
   #   type: route
