--- a/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
@@ -14,11 +14,11 @@ sources:
       container_name: container_name
       pod_labels: pod_labels
       pod_name: pod_name
-      pod_annotations: ""
-    namespace_annotation_fields:
-      namespace_labels: ""
-    node_annotation_fields:
-      node_labels: ""
+      pod_annotations: pod_annotations
+    # namespace_annotation_fields:
+    #   namespace_labels: ""
+    # node_annotation_fields:
+    #   node_labels: ""
 
 sinks:
   journald:
