--- a/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
@@ -9,12 +9,12 @@ sources:
   kubernetes_source:
     type: kubernetes_logs
     use_apiserver_cache: true
-    # pod_annotation_fields:
-    #   container_image: container_image
-    #   container_name: container_name
-    #   pod_labels: pod_labels
-    #   pod_name: pod_name
-    #   pod_annotations: pod_annotations
+    pod_annotation_fields:
+      container_image: container_image
+      container_name: container_name
+      pod_labels: pod_labels
+      pod_name: pod_name
+      pod_annotations: pod_annotations
     # namespace_annotation_fields:
     #   namespace_labels: ""
     # node_annotation_fields:
