--- a/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent/config/vector.yaml
@@ -15,10 +15,10 @@ sources:
       pod_labels: pod_labels
       pod_name: pod_name
       pod_annotations: pod_annotations
-    # namespace_annotation_fields:
-    #   namespace_labels: ""
-    # node_annotation_fields:
-    #   node_labels: ""
+    namespace_annotation_fields:
+      namespace_labels: ""
+    node_annotation_fields:
+      node_labels: ""
 
 sinks:
   journald:
