--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,6 +11,6 @@ resources:
   - ./plex/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
-  #- ./sonarr/ks.yaml
+  - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
   - ./youtubedl/ks.yaml
