--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -16,5 +16,5 @@ resources:
   - ./promlens/ks.yaml
   #- ./promtail/ks.yaml
   - ./smartctl-exporter/ks.yaml
- # - ./thanos/ks.yaml
+  - ./thanos/ks.yaml
   - ./vector/ks.yaml
