--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -201,7 +201,6 @@ spec:
         scrapeConfigSelectorNilUsesHelmValues: false
         enableAdminAPI: true
         walCompression: true
-        retentionSize: 20GB
         enableFeatures:
           - auto-gomaxprocs
           - memory-snapshot-on-shutdown
@@ -212,10 +211,14 @@ spec:
             existingSecret:
               name: thanos-objstore-secret
               key: objstore.yml
+        retention: 2d
+        retentionSize: 15GB
+        externalLabels:
+          cluster: main
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: longhorn
+              storageClassName: local-path
               resources:
                 requests:
                   storage: 20Gi
