--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./influxdb/ks.yaml
+  - ./karma/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kube-state-metrics/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
