certmgr service monitor

--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -39,3 +39,9 @@ spec:
       servicemonitor:
         enabled: true
         prometheusInstance: monitoring
+        targetPort: 9402
+        path: /metrics
+        interval: 60s
+        scrapeTimeout: 10s
+        labels: {}
+        honorLabels: false
