--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   #- ./jupyterhub/ks.yaml
   - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
+  - ./mosquitto/ks.yaml
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
   - ./website/ks.yaml
