--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -17,6 +17,8 @@ stringData:
     SECRET_AUTHELIA_SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:rDlg/VhKLD1h9NWgi4dV5o+KEFlEtjnZHmJhWpxqwP7xdgjpV8oq3rMAWSsLpSmBoT6/l3sRA6qjqPr+Of9wTg==,iv:0KoajALS7ctyDHk1gl+BySX3sabrR0Dcrlz2fi/9v70=,tag:54ryY+Jo2CAgwQQ3z/O8QA==,type:str]
     SECRET_AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:I4DcN9FdLjdM5b+634K2usDpuVbk/MvDsDRYPtazqQ7A4k9P7DC1ZbWW8Hf9U5Rt88Iuq7d7n/HxA5TWZPngZg==,iv:in80Hnnq1YhjaoBnen9+VKZlAgT/KhtgmyF2hLCFS1s=,tag:gCZZ4kPExneU8ZkXSR9DKg==,type:str]
     SECRET_REDIS_PASSWORD: ENC[AES256_GCM,data:bgJYUbWMMmKq,iv:wIBwnjwtFd2+KMZxf5hrMDXohdbrMsn8HA9wbue+hXU=,tag:7sMFWAyNto/NA1qtUxBXSg==,type:str]
+    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:8RlNwYBmzw==,iv:Wwpo3HqF4FvapVHjkTuhhaYRGrbwtBpYnRnQ6hmStfQ=,tag:/rHf/SHSnshSztFsySVvWg==,type:str]
+    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:wZgTWqfOomrQ,iv:NO/9EHNbva2eWe7f1XnWuQRLBTF7aLPizDpSRW0Fels=,tag:dv8g32XFqjvm3uXch5Ep1g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,8 +34,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-19T19:52:19Z"
-    mac: ENC[AES256_GCM,data:sj3vSz0NHtiJRd6IBjFQp4l/weLGQIm2ss6qkSfoMS54DmqaWxC+cmoUG6n0d+KqAjhq/YwzUT7JlP3yq8cd5jtbZm8nqeNGMETSzqx+YGVh4CipdS1pU3nTJKbWVZV5fA4vztI4IHSfflqfEeRYY9i7p5oUjqpNxY4QbxFo6ho=,iv:fVolj79ipSBXIVucfnnQa1cwouH9gAVZGSWYYtasLG8=,tag:SRHRUsresubpAQlTLcRC2w==,type:str]
+    lastmodified: "2023-11-22T22:59:08Z"
+    mac: ENC[AES256_GCM,data:YH2UcHqy0pj3jEq+s4/A8MYFV7gaVSfoR1UQM9TtZj3zdZIOGIK62s161FmqeGTqDVMJQ/lBHqND9Gq/R/2yl12AWLM438Gwz8KqHedevEYVe/kp9nnJ2MOthXljvGHN/b0z4nKE+VliHq+Arh4wN8qWpt3Nx6NWs63zuLsxBPw=,iv:fY2kYjQ+UNEyCsEIZMZeM2S/z/fwkZW4JTpS9RnpSLQ=,tag:VPYxW6QT9bNsFK0QBEtpGg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
