--- a/kubernetes/apps/default/frigate/app/kustomization.yaml
+++ b/kubernetes/apps/default/frigate/app/kustomization.yaml
@@ -11,5 +11,5 @@ configMapGenerator:
       - config.yml=./config/config.yml
 generatorOptions:
   disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
+  # annotations:
+  #   kustomize.toolkit.fluxcd.io/substitute: disabled
