--- a/kubernetes/apps/default/frigate/app/pvc.yaml
+++ b/kubernetes/apps/default/frigate/app/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: frigate-nfs
+  namespace: default
 provisioner: nfs
 parameters:
   archiveOnDelete: "false"
@@ -11,6 +12,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-frigate
+  namespace: default
 spec:
   storageClassName: frigate-nfs
   capacity:
@@ -32,6 +34,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-frigate
+  namespace: default
 spec:
   accessModes: ["ReadWriteMany"]
   storageClassName: frigate-nfs
