--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./hydra/ks.yaml
   - ./prowlarr/ks.yaml
   #- ./qbittorrent/ks.yaml
-  - ./plex/ks.yaml
+ # - ./plex/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
