--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -105,4 +105,4 @@ spec:
       media:
         existingClaim: pvc-videos
         globalMounts:
-          - readOnly: true
+          - path: /media
