--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
             env:
               TZ: America/New_York
               LIBVA_DRIVER_NAME: i965
-              PLUS_API_KEY:
+              #PLUS_API_KEY:
               # Mosquitto
               FRIGATE_MQTT_USERNAME: ${SECRET_MQTT_USERNAME}
               FRIGATE_MQTT_PASSWORD: ${SECRET_MQTT_PASSWORD}
@@ -96,7 +96,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: pvc-frigate
+        existingClaim: pvc-frigate-data
         globalMounts:
           - path: /data
       config-file:
@@ -121,4 +121,4 @@ spec:
         globalMounts:
           - path: /dev/bus/usb
       media:
-        existingClaim: pvc-frigate
+        existingClaim: pvc-frigate-media
