--- a/kubernetes/apps/default/frigate/app/pvc.yaml
+++ b/kubernetes/apps/default/frigate/app/pvc.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-frigate
+  name: pvc-frigate-data
   namespace: default
 spec:
   accessModes:
