--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -8,7 +8,7 @@ logger:
 mqtt:
   host: mosquitto.default.svc.cluster.local
   topic_prefix: frigate
-  user: "${SECRET_MQTT_USERNAME}}"
+  user: "${SECRET_MQTT_USERNAME}"
   password: "${SECRET_MQTT_PASSWORD}"
 
 database:
