--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -52,7 +52,7 @@ cameras:
       inputs:
         - path: rtsp://192.168.1.101:554
           roles: ["detect"]
-        - path: rtsp://localhost:8554/frigate_porch_hq
+        - path: rtsp://192.168.1.101:554
           roles: ["record"]
     detect:
       enabled: False # <---- disable detection until you have a working camera feed
