--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -83,6 +83,8 @@ spec:
       main:
         enabled: true
         className: internal
+        annotations:
+          hajimari.io/icon: mdi:cctv
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
