--- a/kubernetes/apps/default/scrypted/app/helmrelease.yaml
+++ b/kubernetes/apps/default/scrypted/app/helmrelease.yaml
@@ -74,6 +74,8 @@ spec:
       main:
         enabled: true
         className: "internal"
+        annotations:
+          hajimari.io/icon: mdi:cctv
         hosts:
           - host: "scrypted.${SECRET_DOMAIN}"
             paths:
