--- a/kubernetes/apps/default/website/app/ingress.yaml
+++ b/kubernetes/apps/default/website/app/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
+    hajimari.io/icon: mdi:web
 spec:
   ingressClassName: external
   rules:
