--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -19,6 +19,8 @@ stringData:
     SECRET_REDIS_PASSWORD: ENC[AES256_GCM,data:bgJYUbWMMmKq,iv:wIBwnjwtFd2+KMZxf5hrMDXohdbrMsn8HA9wbue+hXU=,tag:7sMFWAyNto/NA1qtUxBXSg==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:8RlNwYBmzw==,iv:Wwpo3HqF4FvapVHjkTuhhaYRGrbwtBpYnRnQ6hmStfQ=,tag:/rHf/SHSnshSztFsySVvWg==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:wZgTWqfOomrQ,iv:NO/9EHNbva2eWe7f1XnWuQRLBTF7aLPizDpSRW0Fels=,tag:dv8g32XFqjvm3uXch5Ep1g==,type:str]
+    SECRET_CAM_USERNAME: ENC[AES256_GCM,data:8Te/218=,iv:EerDoi2AHyrejESRRUa+I0KxycrSfslPCT+ngm3TKWU=,tag:vK8AZBxvzNLkbEHO0fnonQ==,type:str]
+    SECRET_CAM_PASSWORD: ENC[AES256_GCM,data:dlvYLagA,iv:kSelNfLrI4QYnL+lI9buFQfCtCYirDfUBQSai4ciCvk=,tag:cid/ujrY4Dt5jKadDEAHGQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,8 +36,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-22T22:59:08Z"
-    mac: ENC[AES256_GCM,data:YH2UcHqy0pj3jEq+s4/A8MYFV7gaVSfoR1UQM9TtZj3zdZIOGIK62s161FmqeGTqDVMJQ/lBHqND9Gq/R/2yl12AWLM438Gwz8KqHedevEYVe/kp9nnJ2MOthXljvGHN/b0z4nKE+VliHq+Arh4wN8qWpt3Nx6NWs63zuLsxBPw=,iv:fY2kYjQ+UNEyCsEIZMZeM2S/z/fwkZW4JTpS9RnpSLQ=,tag:VPYxW6QT9bNsFK0QBEtpGg==,type:str]
+    lastmodified: "2023-11-24T20:11:49Z"
+    mac: ENC[AES256_GCM,data:S5igVTN7oQtHH5T+z3O/2sgKSYXF/wLpl3NRCeZJ9j9SUwpkLlixoAYwNVDUEXnNUnPExWO9Eh1amF1gPkVtuuTNOBkHSvBtqufBH/AjvcXbre7zt6CnK+7RkcxPFo5NWXkvRfJLPpc+wocuWTKX0I9ShXxzx3qn//Sy/Xe4NGo=,iv:Y0YWxbAB9N2IZpAno44CDuaIU3NpypdNo/7mRvQs5Lg=,tag:oVw+sbOgAomaZ6aJdT7rDg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
