--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -14,11 +14,12 @@ mqtt:
 database:
   path: /data/frigate.db
 
-
+# Optional: Restream configuration
+# Uses https://github.com/AlexxIT/go2rtc (v1.2.0)
 go2rtc:
   streams:
     frontyard:
-      - rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/0
+      - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/0
 ffmpeg:
   global_args: ["-hide_banner", "-loglevel", "warning"]
   hwaccel_args: ["-hwaccel", "vaapi", "-hwaccel_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
