--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
             env:
               TZ: America/New_York
               LIBVA_DRIVER_NAME: i965
-              #PLUS_API_KEY:
+              PLUS_API_KEY: ${SECRET_FRIGATE_PLUS_KEY}
               # Mosquitto
               FRIGATE_MQTT_USERNAME: ${SECRET_MQTT_USERNAME}
               FRIGATE_MQTT_PASSWORD: ${SECRET_MQTT_PASSWORD}
