--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -21,6 +21,7 @@ stringData:
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:wZgTWqfOomrQ,iv:NO/9EHNbva2eWe7f1XnWuQRLBTF7aLPizDpSRW0Fels=,tag:dv8g32XFqjvm3uXch5Ep1g==,type:str]
     SECRET_CAM_USERNAME: ENC[AES256_GCM,data:8Te/218=,iv:EerDoi2AHyrejESRRUa+I0KxycrSfslPCT+ngm3TKWU=,tag:vK8AZBxvzNLkbEHO0fnonQ==,type:str]
     SECRET_CAM_PASSWORD: ENC[AES256_GCM,data:dlvYLagA,iv:kSelNfLrI4QYnL+lI9buFQfCtCYirDfUBQSai4ciCvk=,tag:cid/ujrY4Dt5jKadDEAHGQ==,type:str]
+    SECRET_FRIGATE_PLUS_KEY: ENC[AES256_GCM,data:vhCaghO9Unl7GiiOnK/cPXtJJzTHvFxJKjDkhjDJXa+Q0urahbxcVyY1o57Vfz3F8rLvuX0h3XwMd1X5sONiKTIngcmpeyXV2zgTZSQ=,iv:GGLDJZ5BcJjcEtBVcqwGX3+ZZbqjrL4ALVFLnBxxFNk=,tag:59dRm4Kj+7aO8h5Xop4odg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -36,8 +37,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-24T20:11:49Z"
-    mac: ENC[AES256_GCM,data:S5igVTN7oQtHH5T+z3O/2sgKSYXF/wLpl3NRCeZJ9j9SUwpkLlixoAYwNVDUEXnNUnPExWO9Eh1amF1gPkVtuuTNOBkHSvBtqufBH/AjvcXbre7zt6CnK+7RkcxPFo5NWXkvRfJLPpc+wocuWTKX0I9ShXxzx3qn//Sy/Xe4NGo=,iv:Y0YWxbAB9N2IZpAno44CDuaIU3NpypdNo/7mRvQs5Lg=,tag:oVw+sbOgAomaZ6aJdT7rDg==,type:str]
+    lastmodified: "2023-11-24T21:10:32Z"
+    mac: ENC[AES256_GCM,data:9ecJRVTWde35NtV8oh9cey7QNxbErFCXvLlCI70cW/n3Q7M68mT09C8Qe5QC9MYkSeh84YZsXzJENtkSw5mLVXhbUKUZmqzwBXQxFHumb79IOw4VVpPrbwbbQEwpM+IpF5mOTgNUe3EwYI987iXEgo/7h8ADrIKkIRF303w5W48=,iv:jgP9PXtnLrl0kGkkDYtwQNDntaqqGMFNdY6wePBFD3g=,tag:Gl91bJVaV4N01R2xyDA7Dg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
