--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -50,7 +50,13 @@ record:
       mode: active_objects
 
 objects:
-  track: ["person"]
+  track:
+    - person
+    - dog
+    - cat
+    - bird
+    - bicycle
+    - deer
   filters:
     person:
       min_area: 5000
@@ -66,7 +72,7 @@ cameras:
         - path: rtsp://192.168.1.101:554
           roles: ["record"]
     detect:
-      enabled: False # <---- disable detection until you have a working camera feed
+      enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
       height: 720 # <---- update for your camera's resolution
 
