--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -20,6 +20,8 @@ go2rtc:
   streams:
     frontyard:
       - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/0
+    backyard:
+      - ffmpeg:rtsp://192.168.1.206:554/ch0_0.264
   webrtc:
     listen: ":8555"
     candidates:
@@ -75,6 +77,16 @@ cameras:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
       height: 720 # <---- update for your camera's resolution
-
+  backyard:
+    ffmpeg:
+      inputs:
+        - path: rtsp://192.168.1.206:554/ch0_0.264
+          roles: ["detect"]
+        - path: rtsp://192.168.1.206:554/ch0_0.264
+          roles: ["record"]
+    detect:
+      enabled: false # <---- disable detection until you have a working camera feed
+      width: 1280 # <---- update for your camera's resolution
+      height: 720 # <---- update for your camera's resolution
 
 
