--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -21,6 +21,8 @@ stringData:
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:wZgTWqfOomrQ,iv:NO/9EHNbva2eWe7f1XnWuQRLBTF7aLPizDpSRW0Fels=,tag:dv8g32XFqjvm3uXch5Ep1g==,type:str]
     SECRET_CAM_USERNAME: ENC[AES256_GCM,data:8Te/218=,iv:EerDoi2AHyrejESRRUa+I0KxycrSfslPCT+ngm3TKWU=,tag:vK8AZBxvzNLkbEHO0fnonQ==,type:str]
     SECRET_CAM_PASSWORD: ENC[AES256_GCM,data:dlvYLagA,iv:kSelNfLrI4QYnL+lI9buFQfCtCYirDfUBQSai4ciCvk=,tag:cid/ujrY4Dt5jKadDEAHGQ==,type:str]
+    SECRET_BACKYARDCAM_USERNAME: ENC[AES256_GCM,data:Yi6o5BM=,iv:MShsCN2S1YQ26YLVDpb5QipkSwLgVzJStPjHianCpAU=,tag:OZzwtFNNId9pziN0qK3SOw==,type:str]
+    SECRET_BACKYARDCAM_PASSWORD: ENC[AES256_GCM,data:wnHvCg8=,iv:a1/0OoqNuWFvIoHLp1HRFzrDg7G0oyi1qXjbTO+CnCU=,tag:AeUvV9AotchOLS/anTQN8Q==,type:str]
     SECRET_FRIGATE_PLUS_KEY: ENC[AES256_GCM,data:vhCaghO9Unl7GiiOnK/cPXtJJzTHvFxJKjDkhjDJXa+Q0urahbxcVyY1o57Vfz3F8rLvuX0h3XwMd1X5sONiKTIngcmpeyXV2zgTZSQ=,iv:GGLDJZ5BcJjcEtBVcqwGX3+ZZbqjrL4ALVFLnBxxFNk=,tag:59dRm4Kj+7aO8h5Xop4odg==,type:str]
 sops:
     kms: []
@@ -37,8 +39,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-24T21:10:32Z"
-    mac: ENC[AES256_GCM,data:9ecJRVTWde35NtV8oh9cey7QNxbErFCXvLlCI70cW/n3Q7M68mT09C8Qe5QC9MYkSeh84YZsXzJENtkSw5mLVXhbUKUZmqzwBXQxFHumb79IOw4VVpPrbwbbQEwpM+IpF5mOTgNUe3EwYI987iXEgo/7h8ADrIKkIRF303w5W48=,iv:jgP9PXtnLrl0kGkkDYtwQNDntaqqGMFNdY6wePBFD3g=,tag:Gl91bJVaV4N01R2xyDA7Dg==,type:str]
+    lastmodified: "2023-11-26T01:26:44Z"
+    mac: ENC[AES256_GCM,data:IDWzvRiCZ2KpDx7IU9cU/uMt+Gc7MwsR3YXtT4IuA+0vMKBYJOZL2Hk8OdMjtoyduQuXekerDyOTcc2vdi7E0L//5pSJ5io6SPY/oiM1RyjTxutiDVvOLl3Zo8gOr3/DJsI0UAZvEVY7e2qOyob8jTDzZR2c2HKZZxDN/lSPm24=,iv:9lmA3Ehd/8h8TPComwcb4XCIQmofep/339hK3twGOGw=,tag:Hb+1+eojWdZGRv5+rI0p4g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
