--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -14,7 +14,7 @@ mqtt:
 database:
   path: /data/frigate.db
 
-# Optional: Restream configuration
+# Optional: Restream configuratio
 # Uses https://github.com/AlexxIT/go2rtc (v1.2.0)
 go2rtc:
   streams:
