--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -82,9 +82,9 @@ cameras:
   backyard:
     ffmpeg:
       inputs:
-        - path: rtsp://192.168.1.206:554/ch0_0.264
+        - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
           roles: ["detect"]
-        - path: rtsp://192.168.1.206:554/ch0_0.264
+        - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
           roles: ["record"]
     detect:
       enabled: false # <---- disable detection until you have a working camera feed
