--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -21,9 +21,9 @@ go2rtc:
     frontyard:
       - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/0
     backyard:
-      - rtsp://192.168.1.206:554/ch0_0.264
-      #- rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
-      - "ffmpeg:backyard#video=h264"
+      #- rtsp://192.168.1.206:554/ch0_0.264
+      - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
+      #- "ffmpeg:backyard#video=h264"
   webrtc:
     listen: ":8555"
     candidates:
