--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -14,6 +14,10 @@ mqtt:
 database:
   path: /data/frigate.db
 
+birdseye:
+  enabled: True
+  mode: continuous
+
 # Optional: Restream configuratio
 # Uses https://github.com/AlexxIT/go2rtc (v1.2.0)
 go2rtc:
@@ -74,6 +78,11 @@ cameras:
           roles: ["detect"]
         - path: rtsp://192.168.1.101:554
           roles: ["record"]
+    onvif:
+      host: 192.168.1.101
+      port: 80
+      user: ${SECRET_CAM_USERNAME}
+      password: ${SECRET_CAM_PASSWORD}
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
@@ -85,6 +94,11 @@ cameras:
           roles: ["detect"]
         - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
           roles: ["record"]
+    onvif:
+      host: 192.168.1.206
+      port: 80
+      user: ${SECRET_BACKYARDCAM_USERNAME}
+      password: ${SECRET_BACKYARDCAM_PASSWORD}
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
