frigate onvif config

--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -78,11 +78,9 @@ cameras:
           roles: ["detect"]
         - path: rtsp://192.168.1.101:554
           roles: ["record"]
-    # onvif:
-    #   host: 192.168.1.101
-    #   port: 80
-    #   user: ${SECRET_CAM_USERNAME}
-    #   password: ${SECRET_CAM_PASSWORD}
+    onvif:
+      host: 192.168.1.101
+      port: 80
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
