--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -90,10 +90,12 @@ cameras:
   backyard:
     ffmpeg:
       inputs:
-        - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
-          roles: ["detect"]
-        - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
-          roles: ["record"]
+        - path: rtsp://127.0.0.1:8554/backyard
+          roles: ["detect","record"]
+        # - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
+        #   roles: ["detect"]
+        # - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
+        #   roles: ["record"]
     onvif:
       host: 192.168.1.206
       port: 8888
