--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # - ./budibase/ks.yaml
   - ./frigate/ks.yaml
   - ./hajimari/ks.yaml
-  #- ./home-assistant/ks.yaml
+  - ./home-assistant/ks.yaml
   #- ./jupyterhub/ks.yaml
   - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
