frigate onvif config

--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -79,6 +79,7 @@ cameras:
           roles:
             - detect
             - record
+            - rtmp
         # - path: rtsp://192.168.1.101:554
         #   roles: ["detect"]
         # - path: rtsp://192.168.1.101:554
