--- a/kubernetes/apps/default/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/default/frigate/app/helmrelease.yaml
@@ -36,10 +36,10 @@ spec:
           main:
             image:
               repository: ghcr.io/blakeblackshear/frigate
-              tag: 0.13.0-beta5
+              tag: 0.13.0-beta6
             env:
               TZ: America/New_York
-              LIBVA_DRIVER_NAME: i965
+              #LIBVA_DRIVER_NAME: i965
               PLUS_API_KEY: ${SECRET_FRIGATE_PLUS_KEY}
               # Mosquitto
               FRIGATE_MQTT_USERNAME: ${SECRET_MQTT_USERNAME}
