--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -87,8 +87,8 @@ cameras:
     onvif:
       host: 192.168.1.101
       port: 80
-      user: ""
-      password: ""
+      user: ${SECRET_CAM_USERNAME}
+      password: ${SECRET_CAM_USERNAME}
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
