frigate invif config

--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -88,7 +88,7 @@ cameras:
       host: 192.168.1.101
       port: 80
       user: ${SECRET_CAM_USERNAME}
-      password: ${SECRET_CAM_USERNAME}
+      password: ${SECRET_CAM_PASSWORD}
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
       width: 1280 # <---- update for your camera's resolution
