--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -85,7 +85,7 @@ cameras:
           roles:
             - detect
             - record
-            - rtmp
+            # - rtmp
         # - path: rtsp://192.168.1.101:554
         #   roles: ["detect"]
         # - path: rtsp://192.168.1.101:554
@@ -107,7 +107,7 @@ cameras:
           roles:
             - detect
             - record
-            - rtmp
+            # - rtmp
         # - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
         #   roles: ["detect"]
         # - path: rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
