--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -4,7 +4,7 @@ logger:
   default: info
   logs:
     frigate.record: debug
-    frigate.ptz.onvif: debug
+    #frigate.ptz.onvif: debug
 
 mqtt:
   host: mosquitto.default.svc.cluster.local
@@ -23,6 +23,28 @@ detectors:
 birdseye:
   enabled: True
   mode: continuous
+
+timestamp_style:
+  # Optional: Position of the timestamp (default: shown below)
+  #           "tl" (top left), "tr" (top right), "bl" (bottom left), "br" (bottom right)
+  position: "tl"
+  # Optional: Format specifier conform to the Python package "datetime" (default: shown below)
+  #           Additional Examples:
+  #             german: "%d.%m.%Y %H:%M:%S"
+  format: "%m/%d/%Y %H:%M:%S"
+  # Optional: Color of font
+  color:
+    # All Required when color is specified (default: shown below)
+    red: 255
+    green: 255
+    blue: 255
+  # Optional: Line thickness of font (default: shown below)
+  thickness: 1
+  # Optional: Effect of lettering (default: shown below)
+  #           None (No effect),
+  #           "solid" (solid background in inverse color of font)
+  #           "shadow" (shadow for font)
+  effect: solid
 
 # Optional: Restream configuratio
 # Uses https://github.com/AlexxIT/go2rtc (v1.2.0)
